# FilmGrainPro

./: AI_RESEARCH_PROMPTS_FOR_FILM_GRAIN_DATA.txt  BUILD_STATUS.md  Build and Install.bat  Build and Install.command  CMakeLists.txt  CMakeLists_mac.txt  CMakeLists_simple.txt  FilmGrain_Pro_Architecture.md  FilmGrain_Pro_Technical_Specs.md  INSTALL.md  LICENSE  QUICK_FIX.md  README-BUILD.md  README.md  README_BUILD.md  build-and-install.bat  build-and-install.py  build-and-install.sh  build_mac.sh  comprehensive_film_grain_data_request.txt  fixed.json  fujifilm_grain_data_request.txt  lol.html  stocks_final.json  stocks_fixed.json  ui_mockup_2_tabs.html  🎬 BUILD AND INSTALL.bat  🎬 BUILD AND INSTALL.command  🎬 INSTALL FILM GRAIN GENERATOR.bat  🎬 INSTALL FILM GRAIN GENERATOR.command  🎬 INSTALL FILM GRAIN GENERATOR.py  🎬 INSTALL FILM GRAIN GENERATOR.sh  🎬 SIMPLE INSTALLER.command
.github/workflows/: auto-release.yml  createInstaller.yml  main.yml
Build and Install.app/Contents/: Info.plist
Build and Install.app/Contents/MacOS/: installer
docs/: DEVELOPMENT_SETUP.md
film-grain-generator/: .gitignore  AI_RESEARCH_REQUEST.txt  GPU_ACCELERATION_README.md  IMAGE_DEPENDENT_GRAIN_PLAN.md  IMAGE_DEPENDENT_GRAIN_RESEARCH.txt  advanced-shapeetc.json  ai_research_request.txt  build-installers.bat  build-installers.sh  color.json  color_layer.json  development_effects.json  enhanced_film_data.json  film-stock-data.js  fixed.json  github_workflow.txt  imagecolors.json  index.html  logs_mac_arm.txt  logs_mac_intel.txt  logs_windows.txt  main.js  more.json  package-lock.json  package.json  test_gpu_acceleration.md  variation.json
film-grain-generator/.github/workflows/: build-installers.yml
film-grain-generator/src-tauri/: Cargo.toml  tauri.conf.json
film-grain-generator/src-tauri/icons/: 32x32.png.backup  icon.icns
film-grain-generator/src-tauri/src/: main.rs
film-grain-generator/src-tauri/src/gpu/: cuda_backend.rs  metal_backend.rs  mod.rs  opencl_backend.rs  wgpu_backend.rs
film-grain-generator/src-tauri/src/gpu/shaders/: grain_compute.metal  grain_compute.wgsl
src/: main.cpp  main_simple.cpp
src/core/: color_processor.cpp  color_processor.h  engine.cpp  engine.h  film_stock_database.cpp  film_stock_database.h  grain_renderer.cpp  grain_renderer.h  pattern_library.cpp  pattern_library.h
src/ui/: html_like_ui.cpp  html_like_ui.h  imgui_impl.cpp  imgui_impl.h  main_window.cpp  main_window.h
src/utils/: image.cpp  image.h  performance_monitor.cpp  performance_monitor.h
