[package]
name = "film-grain-generator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
rand = "0.8"
rayon = "1.10"
dirs = "5.0"
base64 = "0.21"

# GPU acceleration dependencies
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }

# Platform-specific GPU backends
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
cudarc = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
opencl3 = { version = "0.9", optional = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# GPU acceleration features
gpu-acceleration = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
cuda = ["dep:cudarc"]
opencl = ["dep:opencl3"]
metal = []

default = []
