[package]
name = "film-grain-generator"
version = "1.0.6"
description = "Film Grain Generator - Professional film grain effects"
authors = ["Panagiotis Smponias"]
license = "Proprietary"
repository = "https://github.com/PanagiotisSmponias/FilmGrainPro"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
rand = "0.8"
rayon = "1.10"
dirs = "5.0"
base64 = "0.21"
wide = "0.7"

# GPU acceleration dependencies
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }

# Platform-specific GPU backends
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
cudarc = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
opencl3 = { version = "0.9", optional = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# GPU acceleration features
gpu-acceleration = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
cuda = ["dep:cudarc"]
opencl = ["dep:opencl3"]
metal = []

default = []

# Release optimizations
[profile.release]
opt-level = 3          # Maximum optimization
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization at cost of compile time
panic = "abort"       # Smaller binary size
strip = true          # Remove debug symbols

[profile.dev]
opt-level = 1         # Some optimization in dev for better performance
